# OTB-SIRIUS

./: .gitmodules  CMakeLists.txt  README.md  otb-module.cmake
app/: CMakeLists.txt  FrequencyResample.cxx
cmake/: FindSIRIUS.cmake
include/: otbFrequencyResampleFilter.h  otbFrequencyResampleFilter.txx
test/: CMakeLists.txt  otbFrequencyResampleTest.cxx  otbFrequencyResampleTestDriver.cxx
